# scenescape

./: .gitignore  CONTRIBUTING.md  Makefile  PROFILING.md  README.md  REUSE.toml  SceneScape-1.4.0-deps.csv  common.mk  deploy.sh  docker-compose.override.yml  exclude_for_release.txt  extract_licenses.py  generate-3rd-party-and-GPL-from-boms.py  generate-3rd-party-from-boms.py  generate-sboms.sh  generate_notice.py  jaeger-config.yaml  logs  packages.Dockerfile  percebro_undistorted_calibration_frame.yml  run-profiling.sh  sources.Dockerfile  third-party-programs.txt  undistort-pipeline.sh  undistortion.md
.github/: CODEOWNERS  ci_migration.md  dependabot.yml  pull_request_template.md
.reuse/: add_missing_license  add_missing_license.py
autocalibration/: .dockerignore  Dockerfile  Makefile  README.md  requirements-runtime.txt
broker/: Dockerfile  Makefile
controller/: Dockerfile  Makefile  README.md  requirements-buildtime.txt  requirements-runtime.txt
controller/src/robot_vision/benchmarks/: .gitignore  CMakeLists.txt  MultipleObjectTrackerBenchmark.cpp  README.md  build_benchmark.sh  compare_benchmarks.sh  run_benchmark.sh
controller/src/robot_vision/test/: CMakeLists.txt  TrackingTests.cpp  main.cpp
dlstreamer-pipeline-server/: README.md  convert_video_to_ts.sh  demo-config.json  model_config.json  perf-config.json  queuing-config-no-ntp.json  queuing-config-no-rtsp.json  queuing-config-reid.json  queuing-config-rtsp.json  queuing-config-webrtc.json  queuing-config.json  retail-benchmark-config.json  retail-config-no-ntp.json  retail-config-reid.json  retail-config-rtsp.json  retail-config.json
docker/: Dockerfile  Dockerfile-model-installer  Makefile  sel-init  webserver-init
docs/: Makefile  README.md  toc.rst
kubernetes/: Makefile  README.md
licenses/: GPL-1.0.txt  Intel_End_User_License.txt  Intel_Simplified_Software_License.txt  LGPL-2.0.txt  LGPL-2.1.txt  The_Regents_of_The_University_of_Michigan.txt  ad-hoc.txt  preamble.txt
manager/: Dockerfile  Makefile  requirements-runtime.txt
model_installer/: Dockerfile  Makefile  requirements-runtime.txt
percebro/: Dockerfile  Makefile  README.md  requirements-runtime.txt
sample_data/: consistent-50-retail-cam.ts  docker-compose-dl-streamer-benchmark.yml  docker-compose-dl-streamer-example-baseline.yml  docker-compose-dl-streamer-example.yml  docker-compose-dls-perf.yml  docker-compose-example.yml  exampledb.tar.bz2  mediamtx.yml  nginx.conf  supass  trim_samples.sh
sboms/: NOTICE.txt
scene_common/: Dockerfile  Makefile  setup.py
tests/: Makefile  Makefile.external_models  Makefile.functional  Makefile.infra  Makefile.metric  Makefile.percebro  Makefile.perf  Makefile.reports  Makefile.sscape  Makefile.user_interface  README.md  calibrationdb.tar.bz2  check-openvino-version.py  common_test_utils.py  config.coveragerc  debugtest.py  diagnostic.py  mqtt-large-messages.py  mqtt_helper.py  pass_fail_report  runtest  test_utils.sh  testdb.tar.bz2  v4l-resolution.py
tools/: calibration_image_saver.py  camdl  intrinsics  (+15 more)
(+855 files in other folders)
